--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.toonystank</groupId>
     <artifactId>ArmorSwap</artifactId>
-    <version>1.3.1.12121848</version>
+    <version>1.4.0</version>
     <packaging>jar</packaging>
 
     <name>ArmorSwap</name>
