--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,7 +3,7 @@ version: '${project.version}'
 main: com.toonystank.armorswap.ArmorSwap
 api-version: 1.14
 authors: [ Edward ]
-description: Simple Armorswap plugin. Swap armor by right clicking (This is a test project)
+description: Simple Armorswap plugin. Swap armor by right clicking
 website: https://taggernation.com
 commands:
   Armorswap:
