--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,7 +5,7 @@ api-version: 1.14
 authors: [ Edward ]
 description: Simple Armorswap plugin. Swap armor by right clicking
 website: https://taggernation.com
-softdepend: [ WorldGuard, Kingdoms ]
+softdepend: [ WorldGuard, Kingdoms, GriefPrevention ]
 commands:
   Armorswap:
     description: Enable or disable armor swapping
